Fix weird scrolling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
+html,
 body {
+  min-height: 100%;
+  min-width: 100%;
+  overflow: hidden;
   margin: 0;
   padding: 0;
   font-family: 'Courier New', Courier, monospace;
